Implemented logic validations for Flight